# dGbyG

./: .gitignore  Document.ipynb  LICENSE  PreProcessingExperimentalData.ipynb  README.en.md  README.md  README.zh.md  TrainingData.csv  Untitled-1.ipynb  all_data.csv  comps.smi  comps_pKa.tsv  config.py  debug.ipynb  demo.ipynb  demo.py  demo_without_pka.py  formation_dg_smiles.csv  pyproject.toml  randomness.ipynb  requirements.txt  requirements_pip_py312.txt  requirements_pip_py39.txt  setup.py  tecrdb_S.csv  tecrdb_copy.csv  test.ipynb  test.smi  test.tsv  test2.ipynb  test3.ipynb
Chemistry/: Compound.py  Reaction.py  __init__.py
RunAnalysis/: ComparisonWithOtherMethods.ipynb  CrossValidationAndTraining.ipynb  CrossValidation_EC.ipynb  CrossValidation_K_fold.ipynb  Figures.ipynb  OtherMethods.ipynb  OtherMethods_CrossValidation.ipynb  Predicting_GibbsEnergy_by_dGPredictor.ipynb  Predicting_GibbsEnergy_by_dGbyG.ipynb  Predicting_GibbsEnergy_by_eQuilibrator.ipynb  PreprocessingExperimentalData.ipynb  PreprocessingRawData.ipynb  Preprocessing_RawData.ipynb  SupplementaryFigures.ipynb  Training.ipynb  comps.smi  comps_pKa.tsv  dGbyG_CrossValidation_EC.ipynb  dGbyG_CrossValidation_K_fold.ipynb  dGbyG_idx.npy  test.ipynb  train.ipynb
api/: Chemistry.py  inference.py  utils.py
dGbyG/: config.py
dGbyG.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
data/: HMDB  Human1  LIPID_MAPS  MetaNetX  README.md  Random_error.csv  Recon3D  TECRDB_dedup.csv  TrainingData.csv  TrainingData_0.csv  TrainingData_1.csv  chemaxon_pKa.csv  experimental_dG_from_eQ  libChEBI  pKa.json  (+1 more)
(+38 files in other folders)
