[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dGbyG"
version = "0.1.0"
description = "a GNN-based tool for predicting standard Gibbs energy changes of metabolic reactions"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["."]
